--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -236,6 +236,7 @@ footer p {
   border-radius: 5px;
   transition: height 0.6s ease-in-out;
   font-size: 18px;
+  margin-bottom: 20px;
 }
 .collapse_content ul {
   display: flex;
